@@ -108,6 +108,7 @@ object Isabelle_Tool
       Build_Stats.isabelle_tool,
       Check_Sources.isabelle_tool,
       Doc.isabelle_tool,
+      Imports.isabelle_tool,
       ML_Process.isabelle_tool,
       NEWS.isabelle_tool,
       Options.isabelle_tool,
@@ -115,7 +116,6 @@ object Isabelle_Tool
       Remote_DMG.isabelle_tool,
       Update_Cartouches.isabelle_tool,
       Update_Header.isabelle_tool,
-      Update_Imports.isabelle_tool,
       Update_Then.isabelle_tool,
       Update_Theorems.isabelle_tool,
       isabelle.vscode.Build_VSCode.isabelle_tool,
