@@ -135,6 +135,7 @@ declare -a SOURCES=(
   Tools/check_keywords.scala
   Tools/debugger.scala
   Tools/doc.scala
+  Tools/imports.scala
   Tools/main.scala
   Tools/print_operation.scala
   Tools/profiling_report.scala
@@ -143,7 +144,6 @@ declare -a SOURCES=(
   Tools/task_statistics.scala
   Tools/update_cartouches.scala
   Tools/update_header.scala
-  Tools/update_imports.scala
   Tools/update_then.scala
   Tools/update_theorems.scala
   library.scala
